updated notebooks serie 2

--- a/notebooks/2.2_extractions_texte_xml_ind.ipynb
+++ b/notebooks/2.2_extractions_texte_xml_ind.ipynb
@@ -16,7 +16,7 @@
     "## README\n",
     "Ce notebook permet d'exploiter les fichiers xml individuels des fichiers présents sur la base de données IIT-CDIP, et de rassembler les informations extraites dans le DataFrame iit_cdip_ind_features\n",
     "\n",
-    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la définition des variables globales d'exécution (**A METTRE A JOUR LORS D'UNE PREMIERE UTILISATION**)\n",
+    "Il réalise tout d'abord certaines opérations préalables (chapitre 1), dont la configuration des répertoires du projet.\n",
     "\n",
     "A l'issue (chapitre 2), il permet de créer le DataFrame, qui contient les informations suivantes:\n",
     "- document_id\n",
@@ -50,6 +50,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8b19594-910b-4ae1-9264-63cec8a89e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "91d20fdd-ae3f-45b5-87b3-f5c7544e87c6",
    "metadata": {},
    "outputs": [],
@@ -58,31 +75,11 @@
     "import time\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from lxml import etree\n",
     "from functools import reduce\n",
     "from utils import remove_ds_store_files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8b31dbe-4038-4b72-8b72-14c92edc6b7f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "project_path = '/Users/ben/Work/mle/ds-project/mai25_bds_extraction/' # à modifier par chacun en fonction de son arborescence\n",
-    "\n",
-    "data_path = os.path.join(project_path, 'data')\n",
-    "raw_data_path = os.path.join(data_path, 'raw')\n",
-    "processed_data_path = os.path.join(data_path, 'processed')\n",
-    "\n",
-    "raw_rvl_cdip_path = os.path.join(raw_data_path, 'RVL-CDIP')\n",
-    "rvl_cdip_images_path = os.path.join(raw_rvl_cdip_path, 'images')\n",
-    "rvl_cdip_labels_path = os.path.join(raw_rvl_cdip_path, 'labels')\n",
-    "\n",
-    "iit_cdip_images_path = os.path.join(raw_data_path, 'IIT-CDIP', 'images')\n",
-    "iit_cdip_xmls_path = os.path.join(raw_data_path, 'IIT-CDIP', 'xmls')"
    ]
   },
   {
@@ -108,8 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_documents = pd.read_parquet(os.path.join(processed_data_path, \"df_documents.parquet\"))\n",
-    "df_documents.head()"
+    "df_paths = pd.read_parquet(PATHS.metadata / \"df_filepaths.parquet\")\n",
+    "df_paths.head()"
    ]
   },
   {
@@ -127,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_base = df_documents[~df_documents.iit_individual_xml_path.isna()][[\"document_id\", \"iit_individual_xml_path\"]]"
+    "df_base = df_paths[~df_paths.iit_individual_xml_path.isna()][[\"iit_individual_xml_path\"]]"
    ]
   },
   {
@@ -167,9 +164,8 @@
    "source": [
     "tags = []\n",
     "parser = etree.XMLParser(recover=True, encoding=\"ISO-8859-1\")\n",
-    "for index, row in df_base.iterrows():\n",
-    "    document_id, relative_path = row.values.tolist()\n",
-    "    filename = os.path.join(data_path, relative_path)\n",
+    "for document_id, relative_path in df_base.iterrows():\n",
+    "    filename = PATHS.data / relative_path.iloc[0]\n",
     "    try:\n",
     "        tree = etree.parse(filename, parser)\n",
     "        root = tree.getroot()\n",
@@ -237,10 +233,8 @@
     "def extract_info_from_xmls():\n",
     "    parser = etree.XMLParser(recover=True, encoding=\"ISO-8859-1\")\n",
     "    tmp_list = []\n",
-    "    for index, row in df_base.iterrows():\n",
-    "        document_id, relative_path = row.values.tolist()\n",
-    "        filename = os.path.join(data_path, relative_path)\n",
-    "    #    print(filename)\n",
+    "    for document_id, relative_path in tqdm(df_base.iterrows()):\n",
+    "        filename = PATHS.data / relative_path.iloc[0]\n",
     "        try:\n",
     "            tree = etree.parse(filename, parser)\n",
     "            root = tree.getroot()\n",
@@ -251,6 +245,7 @@
     "            print(f\"Erreur avec le fichier {filename}\")\n",
     "    df = pd.DataFrame(tmp_list)\n",
     "    df.rename(columns = parsed_fields, inplace=True)\n",
+    "    df.set_index(\"document_id\", drop=True, inplace=True)\n",
     "    return df\n"
    ]
   },
@@ -264,7 +259,7 @@
     "t = time.time()\n",
     "df_xmls = extract_info_from_xmls()\n",
     "print(f\"Duree d'exécution: {time.time() - t:.3f} secondes.\")\n",
-    "df_xmls.head()"
+    "df_xmls.head(1)"
    ]
   },
   {
@@ -282,8 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_iit_cdip_ind_xml_features = df_base.merge(df_xmls, on=\"document_id\", how=\"left\")\n",
-    "df_iit_cdip_ind_xml_features.head()"
+    "df_iit_cdip_ind_xml_features = df_base.join(df_xmls, how=\"left\")\n",
+    "df_iit_cdip_ind_xml_features.head(1)"
    ]
   },
   {
@@ -293,8 +288,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_iit_cdip_ind_xml_features.to_parquet(os.path.join(processed_data_path, \"df_iit_cdip_ind_xml_features.parquet\"))"
+    "df_iit_cdip_ind_xml_features.to_parquet(PATHS.processed_data / \"df_iit_cdip_ind_xml_features.parquet\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b52903-61d4-447c-88f8-609cd3af7f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
