--- a/notebooks/2.4_df-texte-et-completion-ocr.ipynb
+++ b/notebooks/2.4_df-texte-et-completion-ocr.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23c09c12-24e0-4837-948c-0af4db139811",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "91d20fdd-ae3f-45b5-87b3-f5c7544e87c6",
    "metadata": {},
    "outputs": [],
@@ -71,22 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "951509bd-28e0-484f-ba85-e73d259f56ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ocr_output    11356\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_ocr = pd.read_parquet(PATHS.processed_data / \"df_iit_cdip_coll_xml_ltdlwocr_features.parquet\")[[\"ocr_output\"]]\n",
     "df_ocr.isna().sum()"
@@ -102,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "0561e0e1-69c7-4cd9-a429-63c535aea702",
    "metadata": {},
    "outputs": [],
@@ -113,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "be217274-3f51-4a44-8248-97c89a00fd53",
    "metadata": {},
    "outputs": [],
@@ -123,19 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e714116e-0a32-4cfd-9ddd-ffd263afef64",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tesseract version: 5.5.1\n",
-      "pytesseract est bien configuré.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pytesseract\n",
     "try:\n",
@@ -148,19 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2053b4e2-a3a7-44ed-81ac-5c50f601596a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tesseract version: 5.5.1\n",
-      "pytesseract est bien configuré.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# EN CAS D'ERREUR\n",
     "# Si tesseract est bien installé mais ne se trouve pas dans le path, il est possible de définir son chemin avec cette commande:\n",
@@ -176,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ec88fa4d-ea90-4bdd-b5e3-75e23205e41c",
    "metadata": {},
    "outputs": [],
@@ -192,17 +162,9 @@
    "execution_count": null,
    "id": "4abf8b5a-eed1-4d5d-bd79-1b917407d41e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 69%|██████████████████████████████████████████████████████████████████████████████████████████████▉                                           | 9182/13346 [2:08:58<29:28,  2.35it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Environ 3h00 de calcul pour 13346+ lignes\n",
+    "# Environ 3h00 de calcul pour 13346 lignes\n",
     "ocrs = []\n",
     "for file_path in tqdm(image_paths[missing_ocrs.index].values):\n",
     "    ocrs.append(extract_text_from_image(file_path))\n",
@@ -216,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recomputed_ocrs = pd.DataFrame(ocrs, index=missing_ocrs, columns = [\"ocr_output\"])"
+    "recomputed_ocrs = pd.DataFrame(ocrs, index=missing_ocrs.index, columns = [\"ocr_output\"])"
    ]
   },
   {
@@ -226,7 +188,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ocr.combine_first(recomputed_ocrs).isna().sum()"
+    "df_ocr = df_ocr.combine_first(recomputed_ocrs)\n",
+    "df_ocr.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c6b1944-940e-4422-b8c6-33bdab9bd37e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(df_ocr)"
    ]
   },
   {
