finalized 3.5 and min update to 2.4

--- a/notebooks/2.4_df-texte-et-completion-ocr.ipynb
+++ b/notebooks/2.4_df-texte-et-completion-ocr.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ocr = df_ocr.combine_first(recomputed_ocrs)\n",
+    "df_ocr = df_ocr.combine_first(recomputed_ocrs).rename(columns={\"ocr_output\":\"raw_ocr\"})\n",
     "df_ocr.isna().sum()"
    ]
   },
