notebooks texte / quasi finalisés

--- a/notebooks/3.6-visualisation-de-texte.ipynb
+++ b/notebooks/3.6-visualisation-de-texte.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serie = pd.read_parquet(PATHS.processed_data / \"df_raw_ocr.parquet\").ocr_output.dropna()\n",
+    "serie = pd.read_parquet(PATHS.processed_data / \"df_raw_ocr.parquet\").raw_ocr.dropna()\n",
     "serie.head()"
    ]
   },
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \" \".join(df.sample(10000).values)\n",
+    "text = \" \".join(serie.sample(10000).values)\n",
     "\n",
     "wordcloud = WordCloud(width=800, height=400, background_color='white').generate(text)\n",
     "\n",
@@ -91,7 +91,8 @@
    "id": "c748084f-ee79-43a0-a2f5-78cdd599e4a5",
    "metadata": {},
    "source": [
-    "## 2. Sur les données préprocessées"
+    "## 2. Sur les données préprocessées\n",
+    "Pour exécuter cette partie, il faut avoir exécuté le notebook 4.3 (text preprocessing)"
    ]
   },
   {
@@ -112,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \" \".join(df.sample(10000).values)\n",
+    "text = \" \".join(serie.sample(10000).values)\n",
     "\n",
     "wordcloud = WordCloud(width=800, height=400, background_color='white').generate(text)\n",
     "\n",
@@ -122,8 +123,8 @@
     "plt.title(\"Nuage de mots sur les données ocr brutes\")\n",
     "plt.show()\n",
     "\n",
-    "# on observe la prédominance de mots de 1 lettres et de l'expression \"pgNbr\", \n",
-    "# qui est un artéfact de numérisation ou d'océrisation\n"
+    "# il reste des mots de 2 lettres qui ne semblent pas avoir vraiment de sens\n",
+    "# mais on observe beaucoup moins de pollution par des artéfacts d'océrisation\n"
    ]
   },
   {
