--- a/notebooks/4.3-text_preprocessing.ipynb
+++ b/notebooks/4.3-text_preprocessing.ipynb
@@ -55,6 +55,9 @@
    "outputs": [],
    "source": [
     "import re\n",
+    "import os\n",
+    "import time\n",
+    "import jamspell\n",
     "import pandas as pd"
    ]
   },
@@ -96,22 +99,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06a460ba-6bde-4019-a63e-346c1f6d7f36",
+   "id": "7d33013d-623c-4e22-9e7c-d54abf3cc976",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pg_regex = re.compile(r'pgNbr=[0-9]+')\n",
-    "type(pg_regex)"
+    "df = df[:10]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca51ccd-1d92-4d7e-84d1-7579e1bd598e",
+   "id": "06a460ba-6bde-4019-a63e-346c1f6d7f36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head(10)"
+    "pg_regex = re.compile(r'pgNbr=[0-9]+')"
    ]
   },
   {
@@ -168,15 +170,16 @@
    "metadata": {},
    "source": [
     "### 3.1.3. Correction OCR\n",
-    "Nous allons pour cela utiliser l'outil jamspell"
+    "Nous allons pour cela utiliser l'outil jamspell\n",
+    "\n",
+    "#### <span style=\"color:red\">Cette partie est fonctionnelle mais a été désactivée pour des raisons de performance</span>\n",
+    "(3' sur un échantillon de 1000 lignes ==> environ 20 heures, si la croissance est linéaire)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4819ff4e-388d-4f50-88ab-63011cade675",
+   "cell_type": "raw",
+   "id": "476457f6-4e23-497f-905a-cb232b1e0395",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Le but ici est d'utiliser une librairie de correction de texte océrisé nommée jamspell\n",
     "# L'emploi de cette bibliothèque peut se faire soit avant, soit après les traitements réalisés au 1.\n",
@@ -186,34 +189,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ce02a18-6d2f-438a-a20c-e27164a6eeae",
+   "cell_type": "raw",
+   "id": "3e7b0f10-faf4-414a-9f48-c790536aa92d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import jamspell\n",
-    "jamspell_model_path = os.path.join(project_path, 'models', 'jamspell', 'en.bin')\n",
+    "jamspell_model_path = PATHS.models / 'jamspell' / 'en.bin'\n",
+    "assert jamspell_model_path.exists()\n",
+    "jamspell_model_path = str(jamspell_model_path)\n",
     "corrector = jamspell.TSpellCorrector()\n",
     "corrector.LoadLangModel(jamspell_model_path)\n",
     "def apply_jamspell(text):\n",
     "    if not text:\n",
     "        return text\n",
     "    return corrector.FixFragment(text)\n",
-    "# avant = df.ocr_tmp.str.contains(\"&lt;\").sum()\n",
+    "\n",
+    "t0 = time.time()\n",
     "df.loc[:,\"ocr_tmp\"] = df.ocr_tmp.apply(apply_jamspell)\n",
-    "# apres = df.ocr_tmp.str.contains(\"&lt;\").sum()\n",
-    "# avant, apres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c16fa62-7d55-4448-a383-7622c8bc991c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(20)"
+    "print(f\"{len(df)} lignes traitées en {time.time()-t0:.0f} secondes\")"
    ]
   },
   {
@@ -274,14 +266,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "f8f50b53-26bf-4e80-beef-ecbf66a97f98",
-   "metadata": {},
-   "source": [
-    "### 3.1.5 Suppression des lignes ne contenant pas assez d'information"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "910d1643-3b93-4e99-9f13-8c1ce68c08cf",
@@ -307,53 +291,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41da8547-71e0-499c-b407-fbdf4ba63ce5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd9a0969-8fdc-4a5d-ad24-494e2ebdc4fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wordcloud import WordCloud\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Pour affichage dans le notebook (spécifique Jupyter sur macOS)\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Préparer le texte (limité à 500 000 caractères pour éviter les crashs)\n",
-    "text = \" \".join(df['ocr_tmp'].dropna().astype(str).tolist())[:500000]\n",
-    "\n",
-    "# Générer le nuage sans stopwords\n",
-    "wordcloud = WordCloud(width=800, height=400, background_color='white').generate(text)\n",
-    "\n",
-    "# Affichage\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.imshow(wordcloud, interpolation='bilinear')\n",
-    "plt.axis('off')\n",
-    "plt.title(\"Nuage de mots (sans suppression)\")\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3802543-8e77-46a0-a44e-fb0dcb28fd51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fc81614e-38a5-40c1-af3b-8bc3e68c576f",
    "metadata": {},
@@ -364,243 +301,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9687daff-1470-492a-ae85-72212e68b6b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dca27dd-3459-4df3-b966-468114cf38e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "project_root = Path().resolve().parent\n",
+    "if not project_root in [Path(p).resolve() for p in sys.path]:\n",
+    "    sys.path.append(str(project_root))\n",
+    "\n",
+    "from src import PATHS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5c16e596-b294-4985-b813-192bd8f8011b",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a00ad06-0849-4438-993b-9eec33ce5f11",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Todo\n",
-    "def clean_ocr_1(text):\n",
-    "    text = remove_page_number(text)\n",
-    "    text = unescape_html(text)\n",
-    "    text = apply_jamspell(text)\n",
-    "    text = basic_word_filter(text)\n",
-    "    text = remove_stopwords(text)\n",
-    "    \n",
-    "    # ...\n",
-    "    return text\n",
-    "if \"ocr_1\" in train.columns:\n",
-    "    train.drop(columns=\"ocr_1\", inplace=True)\n",
-    "train.insert(\n",
-    "    loc=1,\n",
-    "    column=\"ocr_1\",\n",
-    "    value=train[\"raw_ocr\"].apply(clean_ocr_1),\n",
-    "    allow_duplicates=False\n",
-    ")"
+    "import pandas as pd\n",
+    "from src.models.preprocessing import text_preprocessing1\n",
+    "from p_tqdm import p_map\n",
+    "\n",
+    "df = pd.read_parquet(PATHS.processed_data / \"df_raw_ocr.parquet\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4b37214-aed9-4129-a0fc-f0704f53688d",
+   "id": "19052d77-6797-4a22-ba60-b92c26d420bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "#Séparer les jeux\n",
-    "train_df = df[df['data_set'] == 'train']\n",
-    "val_df   = df[df['data_set'] == 'val']\n",
-    "test_df  = df[df['data_set'] == 'test']  # facultatif pour l’instant\n",
-    "\n",
-    "# 3. Features et labels\n",
-    "X_train = train_df['ocr_tmp']\n",
-    "y_train = train_df['label']\n",
-    "\n",
-    "X_val = val_df['ocr_tmp']\n",
-    "y_val = val_df['label']\n",
-    "\n",
-    "# 4. Vectorisation TF-IDF sur le train uniquement\n",
-    "vectorizer = TfidfVectorizer(max_features=5000)\n",
-    "X_train_vect = vectorizer.fit_transform(X_train)\n",
-    "X_val_vect   = vectorizer.transform(X_val)\n"
+    "# Version monothread / tres lente\n",
+    "ocr1 = text_preprocessing1(df.raw_ocr, with_tqdm=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "3ce6d85e-f202-43da-b9f7-8b30db990d88",
+   "metadata": {},
+   "source": [
+    "# Version multithread / plus rapide (environ 3 heures) mais prise en charge du tqdm plus aléatoire\n",
+    "texts = df['raw_ocr'].tolist()\n",
+    "ocr1 = p_map(lambda x: text_preprocessing1(x), texts)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82196ff1-9d8b-4760-a60a-25a08fe5c124",
+   "id": "c29b99d1-9c9d-450a-976e-a67d7c1d8c4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    " #Modèles à tester\n",
-    "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
-    "    \"Random Forest\": RandomForestClassifier(),\n",
-    "    \"Naive Bayes\": MultinomialNB()}\n"
+    "df_ocr1 = pd.DataFrame(ocr1, columns=[\"ocr\"], index = df.index)\n",
+    "df_ocr1.to_parquet(PATHS.processed_data / \"df_txt_ocr1.parquet\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40b4cd81-60a0-43dd-ad14-e2024b877e23",
-   "metadata": {},
-   "source": [
-    "### 3.1.7. Analyse des résultats obtenus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1381e7d-9f01-40a5-b061-3f8e8c907336",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Entraînement et évaluation\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train_vect, y_train)\n",
-    "    y_pred = model.predict(X_val_vect)\n",
-    "    print(f\"\\n--- {name} ---\")\n",
-    "    print(classification_report(y_val, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85397ba7-febd-4169-bb86-55656d972fc7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "# Dictionnaire pour stocker les métriques\n",
-    "scores = {}\n",
-    "\n",
-    "for name, model in models.items():\n",
-    "    model.fit(X_train_vect, y_train)\n",
-    "    y_pred = model.predict(X_val_vect)\n",
-    "    print(f\"\\n--- {name} ---\")\n",
-    "    print(classification_report(y_val, y_pred))\n",
-    "\n",
-    "    # Stockage des métriques\n",
-    "    report = classification_report(y_val, y_pred, output_dict=True)\n",
-    "    scores[name] = {\n",
-    "        'precision': report['macro avg']['precision'],\n",
-    "        'recall': report['macro avg']['recall'],\n",
-    "        'f1-score': report['macro avg']['f1-score']\n",
-    "    }\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dcb6ace-646f-4a87-9111-6f17da4c2619",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Extraire les métriques\n",
-    "labels = list(scores.keys())\n",
-    "precision = [scores[model]['precision'] for model in labels]\n",
-    "recall = [scores[model]['recall'] for model in labels]\n",
-    "f1 = [scores[model]['f1-score'] for model in labels]\n",
-    "\n",
-    "x = range(len(labels))\n",
-    "width = 0.25\n",
-    "\n",
-    "# Graphique\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.bar([p - width for p in x], precision, width=width, label='Précision')\n",
-    "plt.bar(x, recall, width=width, label='Rappel')\n",
-    "plt.bar([p + width for p in x], f1, width=width, label='F1-score')\n",
-    "\n",
-    "plt.xticks(x, labels, rotation=45)\n",
-    "plt.ylabel(\"Score (macro avg)\")\n",
-    "plt.title(\"Comparaison des métriques par modèle\")\n",
-    "plt.ylim(0, 1.05)\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d8168b5-92e4-4847-978c-41899e3fe3e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install tensorflow-macos)\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "# Encodage des labels (si ce n’est pas encore fait)\n",
-    "encoder = LabelEncoder()\n",
-    "y_train_enc = encoder.fit_transform(y_train)\n",
-    "y_val_enc = encoder.transform(y_val)\n",
-    "\n",
-    "# Définition du modèle MLP\n",
-    "model_mlp = Sequential([\n",
-    "    Dense(128, activation='relu', input_shape=(X_train_vect.shape[1],)),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(64, activation='relu'),\n",
-    "    Dropout(0.3),\n",
-    "    Dense(len(set(y_train_enc)), activation='softmax')  # Softmax pour multi-classe\n",
-    "])\n",
-    "\n",
-    "model_mlp.compile(optimizer='adam',\n",
-    "                  loss='sparse_categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
-    "\n",
-    "# Entraînement\n",
-    "model_mlp.fit(X_train_vect.toarray(), y_train_enc,\n",
-    "              epochs=5, batch_size=32,\n",
-    "              validation_data=(X_val_vect.toarray(), y_val_enc))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec88851e-a6fb-4771-abf4-67f1d3eecc11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Créer le chemin vers Documents\n",
-    "import os\n",
-    "\n",
-    "home = os.path.expanduser(\"~\")\n",
-    "documents_path = os.path.join(home, \"Documents\")\n",
-    "\n",
-    "# Sauvegarder les fichiers dans Documents\n",
-    "train_df.to_csv(os.path.join(documents_path, \"train_df.csv\"), index=False)\n",
-    "test_df.to_csv(os.path.join(documents_path, \"test_df.csv\"), index=False)\n",
-    "val_df.to_csv(os.path.join(documents_path, \"val_df.csv\"), index=False)\n",
-    "\n",
-    "print(\"✅ Fichiers enregistrés dans ton dossier Documents !\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ba48deb-1fc8-42e1-914e-bee5429361c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a050c39-6ed1-40d3-a7f8-3f9b1ea00603",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
