--- a/notebooks/6.3-txt-DL.ipynb
+++ b/notebooks/6.3-txt-DL.ipynb
@@ -53,13 +53,16 @@
    "source": [
     "import joblib\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import classification_report"
+    "from tensorflow.keras.layers import Dense, Dropout, Input\n",
+    "\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
@@ -101,11 +104,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "3abbe94c-f49a-44af-ac61-8907acb5f600",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c393500c-0d68-48bd-b54a-a8e324c7a005",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "sample = pd.read_parquet(PATHS.samples / 'df_documents_sample_40k_3.parquet')\n",
+    "sample = pd.read_parquet(PATHS.samples / 'df_documents_sample_4k_3.parquet')\n",
     "features = features.join(sample, how='inner')\n",
     "features.shape"
    ]
@@ -177,6 +182,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7223ed8-91dd-460f-a3b3-511d88d3393c",
+   "metadata": {},
+   "source": [
+    "### 4.1 Premier MLP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "78f8e132-3efe-4440-8080-892000eacb7c",
@@ -184,23 +197,209 @@
    "outputs": [],
    "source": [
     "# Définition du modèle MLP\n",
-    "model_mlp = Sequential([\n",
-    "    Dense(128, activation='relu', input_shape=(X_train_vect.shape[1],)),\n",
+    "first_mlp = Sequential([\n",
+    "    Input(shape=(X_train_vect.shape[1],)),  \n",
+    "    Dense(128, activation='relu'),\n",
     "    Dropout(0.5),\n",
     "    Dense(64, activation='relu'),\n",
     "    Dropout(0.3),\n",
     "    Dense(16, activation='softmax')  # Softmax pour multi-classe\n",
     "])\n",
     "\n",
-    "model_mlp.compile(optimizer='adam',\n",
+    "first_mlp.compile(optimizer='adam',\n",
     "                  loss='sparse_categorical_crossentropy',\n",
     "                  metrics=['accuracy'])\n",
     "\n",
     "# Entraînement\n",
-    "model_mlp.fit(X_train_vect.toarray(), y_train,\n",
+    "first_mlp.fit(X_train_vect.toarray(), y_train,\n",
     "              epochs=5, batch_size=32,\n",
     "              validation_data=(X_val_vect.toarray(), y_val))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0984f64d-59be-4460-8137-64ae90328fee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = np.argmax(first_mlp.predict(X_val_vect), axis=1)\n",
+    "print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12cd70f9-f1b7-4a70-99b2-bfee8910a9ea",
+   "metadata": {},
+   "source": [
+    "### 4.2 Second MLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3d06141-d8e3-4081-8506-2b99d8589392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modèle MLP léger (scikit-learn)\n",
+    "second_mlp = MLPClassifier(hidden_layer_sizes=(100,), max_iter=300, random_state=42)\n",
+    "second_mlp.fit(X_train_vect, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5918a72f-58f0-4f52-abe4-123cf89777b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = second_mlp.predict(X_val_vect)\n",
+    "print(classification_report(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d3cffdc-7277-4152-bff8-7230ea499a06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matrice de confusion\n",
+    "cm = confusion_matrix(y_val, y_pred)\n",
+    "\n",
+    "# Création de la heatmap\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\")\n",
+    "\n",
+    "plt.xlabel(\"Prédit\")\n",
+    "plt.ylabel(\"Réel\")\n",
+    "plt.title(\"Matrice de confusion - MLPClassifier\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fa02340-6c00-4ed1-a3c9-4a25381338bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(second_mlp.loss_curve_)\n",
+    "plt.title(\"Courbe de perte - MLP\")\n",
+    "plt.xlabel(\"Itérations\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1d765ec-e5d9-47d0-ba6c-8a8e2698004a",
+   "metadata": {},
+   "source": [
+    "### 4.3 Recherche de paramètres optimaux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e2c8105-8bf4-4387-ae7a-048e59dccbc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'hidden_layer_sizes': [(100,), (128,), (100, 50), (128, 64)],\n",
+    "    'activation': ['relu', 'tanh'],\n",
+    "    'alpha': [0.0001, 0.001, 0.01],  # régularisation L2\n",
+    "    'learning_rate': ['constant', 'adaptive']\n",
+    "}\n",
+    "\n",
+    "grid = GridSearchCV(MLPClassifier(max_iter=10, random_state=42), param_grid, cv=3, scoring='accuracy', verbose=2)\n",
+    "grid.fit(X_train_vect, y_train)\n",
+    "\n",
+    "print(\"Meilleurs paramètres :\", grid.best_params_)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a8d22a3-bf5e-4d4d-8a57-10b50c51ca97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(y_val, y_pred, target_names=encoder.classes_.astype(str)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3127206d-ef1f-4336-a6e5-10478d5c10b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Meilleurs paramètres : {'activation': 'tanh', 'alpha': 0.0001, 'hidden_layer_sizes': (128, 64), 'learning_rate': 'constant'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39e206cb-c346-44ce-9ae9-50c0d1ae31ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "third_mlp = MLPClassifier(hidden_layer_sizes=(128,64), max_iter=300, random_state=42, activation='tanh')\n",
+    "third_mlp.fit(X_train_vect, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de2770f-4e56-49ee-942a-b29844ad71ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8ee776b-4216-4798-97e0-f844caac3726",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "598ee947-1a8d-49cc-8678-a1db53ff21b4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e703a149-ec5a-4d7c-9bf8-c4205b37c76e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36321eda-fc7f-497d-bc56-bed46332ada4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55c377b2-d99c-49eb-b895-1ae2b6918990",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
